--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,7 +23,7 @@ openprocurement.planning.api = git https://github.com/openprocurement/openprocur
 recipe = zc.recipe.egg:scripts
 dependent-scripts = true
 eggs =
-    openprocurement.edge [test]
+    openprocurement.blade [test]
     openprocurement.api
     openprocurement_client
     openprocurement.auctions.core
